# yes-science

./: Book2.xlsx  calculus.ipynb  distr_params.ipynb  main.ipynb  modelling.ipynb  models.py  peaks.ipynb  pg.ipynb  pyproject.toml  samples.npy  transform.ipynb  описание файла.txt
msu-thesis/: thesis.tex
pres/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.nav  main.out  main.tex  main.toc  refs.bib
text/: main.aux  main.bbl  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
