[tool.poetry]
name = "yes-science"
version = "0.1.0"
description = ""
authors = ["LumbaBalumba <vlad.lazar.ik528@yandex.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
wt = "^2.1.1"
pywavelets = "^1.7.0"
ipykernel = "^6.29.5"
sympy = "^1.13.3"
optuna = "^4.1.0"
pharmapynetics = {git = "https://github.com/LumbaBalumba/pharmapynetics.git"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
